# solutions

./: .gitignore  HOME.md  README.md
kattis/: kattis-dl.py  kattis-open.py  onlinejudge-dl.py  pyproject.toml  test.cpp
kattis/246greaaat/: 246greaaat.cpp
kattis/@solved/246greaaat/: 246greaaat.cpp  EDITORIAL.md
kattis/@solved/3dprinter/: 3dprinter.cpp  EDITORIAL.md
kattis/@solved/airconditioned/: airconditioned.cpp
kattis/@solved/alienintegers/: alienintegers.cpp
kattis/@solved/alphabetspam/: alphabetspam.cpp
kattis/@solved/amoebas/: amoebas.cpp
kattis/@solved/ants/: ants.cpp
kattis/@solved/apaxiaaans/: apaxiaaans.cpp
kattis/@solved/appallingarchitecture/: appallingarchitecture.cpp
kattis/@solved/arbitrage/: EDITORIAL.md  arbitrage.cpp
kattis/@solved/areal/: areal.cpp
kattis/@solved/armystrengthhard/: armystrengthhard.cpp
kattis/@solved/artichoke/: artichoke.cpp
kattis/@solved/autori/: autori.cpp
kattis/@solved/babybites/: babybites.cpp
kattis/@solved/backspace/: backspace.cpp
kattis/@solved/baconeggsandspam/: baconeggsandspam.cpp
kattis/@solved/baloni/: baloni-fast.cpp  baloni.cpp
kattis/alienintegers/: alienintegers.cpp
kattis/bagoftiles/: bagoftiles.cpp
kattis/cardmagic/: cardmagic.cpp
kattis/errands/: errands.cpp
kattis/exactchange2/: exactchange2.cpp
kattis/fibtour/: fibtour.cpp
kattis/geppetto/: geppetto.cpp
kattis/matchsticks/: matchsticks.cpp
kattis/ninetynine/: ninetynine.cpp
kattis/orders/: orders.cpp
kattis/safehouses/: safehouses.cpp
kattis/simplearithmetic/: simplearithmetic.cpp
(+1037 files in other folders)
