[tool.poetry]
name = "kattis"
version = "0.1.0"
description = ""
authors = ["Maded Batara III <dev@contact.blubits.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
autokattis = "^1.6.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
